# Tropic

./: .gitignore  CMakeLists.txt  README.md  pkgInfo.py  unittest.in  unittest.sh
cmake/: ExportTropic.cmake  TropicConfig.cmake.in
config/: ConstraintSetTest1.xml  cDualArmBoxed.xml  cDualArmScitos7.xml  cPouring.xml  gDualArmBoxed.xml  gDualArmScitos7.xml  kinova_ulw2_sph_7dof.xml  scitos_base_right.xml
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  Mainpage.dox
doc/images/: Images.pptx
doc/latex/: images.pptx  linearAccelerationSequence.tex  main.tex  rcs.sty  via.tex
examples/: ExampleClickTrajectory.cpp  ExampleClickTrajectory.h  ExampleTrajectoryIK.cpp  ExampleTrajectoryIK.h  TestSimpleTrajectory.cpp  TestTrajectory.cpp
src/: ActivationPoint.cpp  ActivationPoint.h  ActivationSet.cpp  ActivationSet.h  AnchoredPositionConstraint.cpp  AnchoredPositionConstraint.h  ConnectBodyConstraint.cpp  ConnectBodyConstraint.h  Constraint1D.cpp  Constraint1D.h  ConstraintFactory.cpp  ConstraintFactory.h  ConstraintSet.cpp  ConstraintSet.h  EulerConstraint.cpp  EulerConstraint.h  GraphConstraint.cpp  GraphConstraint.h  JointWeightConstraint.cpp  JointWeightConstraint.h  KeepPositionConstraint.cpp  KeepPositionConstraint.h  LiftObject.cpp  LiftObject.h  MultiGoalConstraint.cpp  MultiGoalConstraint.h  PolarConstraint.cpp  PolarConstraint.h  PoseConstraint.cpp  PoseConstraint.h  PositionConstraint.cpp  PositionConstraint.h  PositionTrajectoryNode.h  PouringConstraint.h  Trajectory1D.cpp  Trajectory1D.h  TrajectoryActivationHandler.cpp  TrajectoryActivationHandler.h  TrajectoryController.cpp  TrajectoryController.h  (+14 more)
